# pforth

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  core__fs_8h.html  core__fs_8h.js  core__fs_8h_source.html  dict_8c.html  dict_8c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  generators__run_8h.html  generators__run_8h.js  generators__run_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  interp_8c.html  interp_8c.js  main_8c.html  main_8c.js  navtreedata.js  navtreeindex0.js  pforth_8c.html  pforth_8c.js  pforth_8h.html  pforth_8h.js  pforth_8h_source.html  struct__dict__entry.html  (+16 more)
cmake/: CodeCoverage.cmake  Coveralls.cmake
doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  interp_8c.html  interp_8c.js  main_8c.html  navtreeindex0.js  pforth_8c.html  pforth_8c.js  pforth_8h.html  pforth_8h.js  pforth_8h_source.html  struct__pforth__word.html  struct__pforth__word.js  words_8c.html  words_8c.js
doc/html/search/: all_0.js  all_2.js  all_5.js  all_7.js  defines_1.js  defines_3.js  defines_5.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js  typedefs_0.js  variables_3.js
scripts/: coveralls.sh.in  publish-doxygen.sh
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_c.js  defines_d.js  defines_e.js  files_0.js  files_1.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  (+22 more)
src/: .dir-locals.el  core.fs  dict.c  generators_run.h  interp.c  main.c  pforth.c  pforth.h  token.h  words.c  words.h
test/: interp.c  math.c  stack.c  words.c  zero.c
